# prism

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  justfile  librust_out.rlib
.github/workflows/: ci.yml  publish.yml
.nix-cargo/: .global-cache
beam/: gleam.toml
beam/src/: prism_beam.gleam
beam/test/: prism_beam_test.gleam
core/: Cargo.toml  README.md  build.rs  optics_spectral.mod
core/benches/: beam_pipeline.rs
core/native/: spectral.f90
core/src/: beam.rs  bundle.rs  coincidence.rs  connection.rs  content.rs  crystal.rs  ffi.rs  kernel.rs  lib.rs  luminosity.rs  merkle.rs  metal.rs  named.rs  oid.rs  optic_kind.rs  precision.rs  scalar_loss.rs  spectral_dimension.rs  spectral_oid.rs  spectral_uuid.rs  store.rs  substrate_ref.rs  trace.rs
core/src/lambda/: mod.rs  reduce.rs  typed.rs
core/src/optics/: fold.rs  gather.rs  iso.rs  lens.rs  meta.rs  mod.rs  monoid.rs  optic_prism.rs  setter.rs  traversal.rs
core/src/pq/: filter.rs  mod.rs  output.rs  reference.rs  schema.rs  target.rs
core/tests/: bundle_integration.rs  declaration_round_trip.rs  integration.rs  lambda_integration.rs  optics_integration.rs  pq.rs  pq_schema.rs  spectral_uuid.rs  substrate_ref.rs
derive/: Cargo.toml
derive/src/: declaration.rs  lib.rs
docs/: architecture.md  experimental-chip.md  garden.md  optics-implementation-report-2026-04-08.md  prism-migration-report-2026-04-08.md  seam-taut-rereview-2026-04-08.md  seam-taut-review-2026-04-08.md
docs/specs/: coincidence-hash-integration.md  derive-lambda-plan.md  lambda-feature-spec.md  pq.md
docs/superpowers/plans/: 2026-04-08-prism-optics-layer.md  2026-04-11-imperfect-semifunctor.md
docs/superpowers/specs/: 2026-04-08-connection-substrate-design.md  2026-04-08-prism-monoid-optics-design.md  2026-04-11-imperfect-semifunctor-design.md
imperfect/: Cargo.toml  README.md
imperfect/docs/: context.md  loss-types.md  migration.md  pipeline.md  terni-functor.md
imperfect/src/: lib.rs
prismqueer/: Cargo.toml  README.md  build.rs
prismqueer/benches/: beam_pipeline.rs
prismqueer/native/: prism.f90
prismqueer/src/: beam.rs  bundle.rs  coincidence.rs  connection.rs  content.rs  crystal.rs  ffi.rs  kernel.rs  lib.rs  luminosity.rs  metal.rs  named.rs  oid.rs  precision.rs  spectral_dimension.rs  spectral_oid.rs  spectral_uuid.rs  store.rs  substrate_ref.rs  trace.rs
prismqueer/src/lambda/: mod.rs  reduce.rs  typed.rs
prismqueer/src/optics/: fold.rs  gather.rs  iso.rs  lens.rs  monoid.rs  optic_prism.rs  setter.rs  traversal.rs
prismqueer/src/pq/: filter.rs  mod.rs  output.rs  reference.rs  schema.rs  target.rs
prismqueer/tests/: bundle_integration.rs  declaration_round_trip.rs  integration.rs  lambda_integration.rs  optics_integration.rs  pq.rs  pq_schema.rs  spectral_uuid.rs  substrate_ref.rs
projections/: Cargo.toml  LICENSE  README.md
projections/src/: declaration.rs  lib.rs
src/: beam.rs  connection.rs  lib.rs  loss.rs  metal.rs  oid.rs  optic.rs  precision.rs  spectral_oid.rs  trace.rs
src/optics/: fold.rs  gather.rs  iso.rs  lens.rs  meta.rs  mod.rs  monoid.rs  optic_prism.rs  phantom_crystal.rs  setter.rs  traversal.rs
tests/: optics_integration.rs
