[package]
name = "prism-core"
version = "0.1.0"
edition = "2021"
description = "Beam (semifunctor) + Prism (monoid). Three dimensions: focus, project, refract."

[features]
default = []
optics = []
bundle = ["optics"]
lambda = []
lapack = ["dep:cc"]

[dependencies]
terni = { path = "../imperfect" }
prism-derive = { path = "../derive" }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
cc = { version = "1", optional = true }

[[bench]]
name = "beam_pipeline"
harness = false
