[package]
name = "prism-core"
version = "0.1.0"
edition = "2021"
description = "Beam (semifunctor) + Prism (monoid). Three dimensions: focus, project, refract."

[features]
default = []
optics = []
bundle = ["optics"]
lambda = []
lapack = ["dep:cc"]
pq = ["dep:serde", "dep:serde_json"]

[dependencies]
terni = { path = "../imperfect" }
prism-derive = { path = "../derive" }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# pq schema tests validate the emitted JSON Schema against known-good payloads.
# Disable default features (resolve-http, resolve-file, tls-aws-lc-rs) — we
# only need in-memory schema compilation.
jsonschema = { version = "0.46", default-features = false }

[build-dependencies]
cc = { version = "1", optional = true }

[[bench]]
name = "beam_pipeline"
harness = false
