[package]
name = "prismqueer"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "The spectral-triple substrate — five operations (focus, project, split, shift, settle), the Prism trait, zero deps. The foundation."
repository = "https://github.com/systemic-engineering/prism"
homepage = "https://github.com/systemic-engineering/prism"
readme = "README.md"
keywords = ["prism", "spectral", "substrate", "algebra", "optics"]
categories = ["rust-patterns", "no-std"]

[features]
default = []
optics = []
bundle = ["optics"]
lambda = []
lapack = ["dep:cc"]
pq = ["dep:serde", "dep:serde_json"]

[dependencies]
terni = { version = "0.7", path = "../imperfect" }
prismqueer-projections = { version = "0.1", path = "../projections" }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# pq schema tests validate the emitted JSON Schema against known-good payloads.
# Disable default features (resolve-http, resolve-file, tls-aws-lc-rs) — we
# only need in-memory schema compilation.
jsonschema = { version = "0.46", default-features = false }
# T23 declaration-round-trip test: round-trip Rust items through syn
# at the canonical-form altitude. Used by
# `tests/declaration_round_trip.rs`.
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"

[build-dependencies]
cc = { version = "1", optional = true }

[[bench]]
name = "beam_pipeline"
harness = false
